--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                 </ul>
 
                 <ul id="nav-mobile" class="sidenav">
-                    <li><a href="#">Navbar Link</a></li>
+                    <li><a href="# ">Css</a></li>
+                    <li><a href="#">Js</a></li>
+                    <li><a href="#">BootStrap</a></li>
                 </ul>
                 <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             </div>
