--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
                 <br><br>
-                <h1 class="header center black-text">Starter Template</h1>
+                <h1 class="header center black-text">FrontEnd Final Project</h1>
                 <div class="row center">
-                    <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+                    <h5 class="header col s12 light">maya osa pipi harbe </h5>
                 </div>
                 <div class="row center">
                     <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light green">Get Started</a>
@@ -58,7 +58,7 @@
 
                             <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
                             <div class="col s12 m7 center"> 
-                                <a href="#!" class="waves-effect waves-circle waves-light btn-floating secondary-content light-blue">
+                                <a href="#firstcss" class="waves-effect waves-circle waves-light btn-floating secondary-content light-blue">
                                     <i class="material-icons">send</i>
                                 </a>
                             </div>
@@ -67,13 +67,13 @@
 
                     <div class="col s12 m4">
                         <div class="icon-block">
-                            <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
+                            <h2 class="center red-text"><i class="material-icons">group</i></h2>
                             <h5 class="center">User Experience Focused</h5>
 
                             <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
 
                             <div class="col s12 m7 center"> 
-                                <a href="#!" class="waves-effect waves-circle waves-light btn-floating secondary-content red">
+                                <a href="#secodecss" class="waves-effect waves-circle waves-light btn-floating secondary-content red">
                                     <i class="material-icons">send</i>
                                 </a>
                             </div>
@@ -82,7 +82,7 @@
 
                     <div class="col s12 m4">
                         <div class="icon-block">
-                            <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+                            <h2 class="center green-text"><i class="material-icons">settings</i></h2>
                             <h5 class="center">Easy to work with</h5>
 
                             <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
@@ -101,8 +101,8 @@
             <br><br>
         </div>
 
-
-
+<!-- first Css paragraph-->
+        <div id="firstcss">
         <div class="container main main-raised">
             <h4 class="center">The css Part of the Course </h4>
             <div class="selection">
@@ -118,6 +118,9 @@
                             You don't see this visual style as much in web pages because browsers, by default, display paragraphs with space underneath them as a way to show where one ends and another begins, but if you want to style a page to have that print-inspired indent style on paragraphs, you can do so with the text-indent style property.
 
                             The syntax for this property is simple. Here is how you would add a text-indent to all the paragraphs in a document.
+                            Good web design is often about good typography. Since so much of a web page's content is presented as text, being able to style that text to be both attractive and effective is an important skill to possess as a web designer. Unfortunately, we do not have the same level of typographic control online that we do in print. This means that we cannot always reliably style text on a website in the same way that we could do so in a printed piece. One common paragraph style that you do see often in print (and which we can recreate online) is where the first line of that paragraph is indented one tab space. This allows readers to see where one paragraph begins and another ends. You don't see this visual style as much in web pages because browsers, by default, display paragraphs with space underneath them as a way to show where one ends and another begins, but if you want to style a page to have that print-inspired indent style on paragraphs, you can do so with the text-indent style property. The syntax for this property is simple. Here is how you would add a text-indent to all the paragraphs in a document.
+                            Good web design is often about good typography. Since so much of a web page's content is presented as text, being able to style that text to be both attractive and effective is an important skill to possess as a web designer. Unfortunately, we do not have the same level of typographic control online that we do in print. This means that we cannot always reliably style text on a website in the same way that we could do so in a printed piece. One common paragraph style that you do see often in print (and which we can recreate online) is where the first line of that paragraph is indented one tab space. This allows readers to see where one paragraph begins and another ends. You don't see this visual style as much in web pages because browsers, by default, display paragraphs with space underneath them as a way to show where one ends and another begins, but if you want to style a page to have that print-inspired indent style on paragraphs, you can do so with the text-indent style property. The syntax for this property is simple. Here is how you would add a text-indent to all the paragraphs in a document.
+                            Good web design is often about good typography. Since so much of a web page's content is presented as text, being able to style that text to be both attractive and effective is an important skill to possess as a web designer. Unfortunately, we do not have the same level of typographic control online that we do in print. This means that we cannot always reliably style text on a website in the same way that we could do so in a printed piece. One common paragraph style that you do see often in print (and which we can recreate online) is where the first line of that paragraph is indented one tab space. This allows readers to see where one paragraph begins and another ends. You don't see this visual style as much in web pages because browsers, by default, display paragraphs with space underneath them as a way to show where one ends and another begins, but if you want to style a page to have that print-inspired indent style on paragraphs, you can do so with the text-indent style property. The syntax for this property is simple. Here is how you would add a text-indent to all the paragraphs in a document.
                         </p>
                     </div>
 
@@ -125,6 +128,10 @@
                 </div>
             </div>
         </div>
+
+    </div>
+    <!-- Second css Paragraph-->
+    <div id="secodecss">
         <div class="container">
             <h4 class="center">The css Part of the Course </h4>
             <div class="selection">
@@ -165,37 +172,38 @@
                 </div>
             </div>
         </div>
+    </div>
 
         <div class="container">
                 <h1>image Gallery </h1>
             
            <div class="row card">
             <div class="col s12 m6 l4">
-                    <img src="images/1.JPG" class="responsive-img card materialbox" alt="">
+                    <img src="images/1.JPG" class="responsive-img card materialbox" alt="" onclick="" >
             </div>
             <div class="col s12 m6 l4">
-                    <img src="images/2.JPG" class="responsive-img card materialbox" alt="">
+                    <img src="images/2.JPG" class="responsive-img card materialbox" alt="" onclick="" >
             </div>
             <div class="col s12 m6 l4">
-                    <img src="images/3.JPG" class="responsive-img card materialbox" alt="">
+                    <img src="images/3.JPG" class="responsive-img card materialbox" alt="" onclick="" >
             </div>
             <div class="col s12 m6 l4">
-                    <img src="images/4.JPG" class="responsive-img card materialbox" alt="">
+                    <img src="images/4.JPG" class="responsive-img card materialbox" alt="" onclick="" >
             </div>
             <div class="col s12 m6 l4">
-                    <img src="images/5.JPG" class="responsive-img card materialbox" alt="">
+                    <img src="images/5.JPG" class="responsive-img card materialbox" alt="" onclick="" >
             </div>
             <div class="col s12 m6 l4">
-                    <img src="images/6.JPG" class="responsive-img card materialbox" alt="">
+                    <img src="images/6.JPG" class="responsive-img card materialbox" alt="" onclick="" >
             </div>
             <div class="col s12 m6 l4">
-                    <img src="images/7.JPG" class="responsive-img card materialbox" alt="">
+                    <img src="images/7.JPG" class="responsive-img card materialbox" alt=""  onclick="" >
             </div>
             <div class="col s12 m6 l4">
-                    <img src="images/8.JPG" class="responsive-img card materialbox" alt="">
+                    <img src="images/8.JPG" class="responsive-img card materialbox" alt="" onclick="" >
             </div>
             <div class="col s12 m6 l4">
-                    <img src="images/9.JPG" class="responsive-img card materialbox" alt="">
+                    <img src="images/9.JPG" class="responsive-img card materialbox" alt=""  onclick="" >
             </div>
 
            </div>     
@@ -203,14 +211,60 @@
 
         </div>
 
+<div id="thirdcss">
+<div class="container">
+        <div class="col s5"></div><div class="col s5"></div><i class="fa fa-remove"></i><i class="fa fa-remove"></i><div class="container">
+                <div class="row">
+                    <div class="col m10 offset-m1 s12">
+                        <h2 class="center-align">Join Us</h2>
+                        <div class="row">
+                            <form class="col s12">
+                                <div class="row">
+                                    <div class="input-field col m6 s12">
+                                        <input id="first_name" type="text" class="validate">
+                                        <label for="first_name">First Name</label>
+                                    </div>
+                                    <div class="input-field col m6 s12">
+                                        <input id="last_name" type="text" class="validate">
+                                        <label for="last_name">Last Name</label>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="input-field col m6 s12">
+                                        <i class="mdi-content-mail prefix"></i>
+                                        <input id="email" type="email" class="validate" required>
+                                        <label for="email">Email</label>
+                                    </div>
+                                    <div class="input-field col m6 s12">
+                                        <i class="mdi-maps-store-mall-directory prefix"></i>
+                                        <input id="company" type="text" class="validate">
+                                        <label for="company">Company</label>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="input-field col s12">
+                                      <textarea id="message" class="materialize-textarea"></textarea>
+                                      <label for="message">Message</label>
+                                    </div>
+                                </div>
+                         <div class="divider"></div>
+                                <div class="row">
+                                    <div class="col m12">
+                                     <p class="right-align"><button class="btn btn-large waves-effect waves-light" type="button" name="action">Send Message</button></p>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-<script>
-$(document).ready(function(){
-$('.materialbox').materialbox();
 
-});
+</div>
 
-</script>
+
+
+</div>
 
 
 
@@ -258,7 +312,7 @@ $('.materialbox').materialbox();
         <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script src="js/materialize.js"></script>
         <script src="js/init.js"></script>
-        <script src="first.js"></script>
+        <script src="code.js"></script>
         <!--  End Scripts-->
 
 
