--- a/index.html
+++ b/index.html
@@ -63,25 +63,25 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Clarence
-            <span class="text-primary">Taylor</span>
+          <h1 class="mb-0">Vlad 
+            <span class="text-primary">Belousov</span>
           </h1>
-          <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-            <a href="mailto:name@email.com">name@email.com</a>
+          <div class="subheading mb-5">Brodetzki netanya street ·
+            <a href="mailto:name@email.com">vladbelousov54@gmail.com</a>
           </div>
-          <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="lead mb-5">I am experienced photographer , Currectly serving in IDF (till when) Shooting for like 3.5 years have Alot of Stuff and Made alot Camera Pics </p>
           <div class="social-icons">
             <a href="#">
               <i class="fab fa-linkedin-in"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-github"></i>
             </a>
             <a href="#">
               <i class="fab fa-twitter"></i>
             </a>
             <a href="#">
               <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#">
+                <i class="fab fa-instagram"></i>
             </a>
           </div>
         </div>
